# DataQualityBackend

./: .gitignore  README.md  agent-database-query-spec.md  consola.txt  data_analysis_backend  pyproject.toml  salida.txt
data_quality_backend/: __init__.py  __main__.py  auth.py  contracts.py  default_components.py  http_mcp_client.py  http_server.py  mcp_client.py  mcp_schema_inspector.py  orchestrator.py  planner.py  schema_cache.py  schema_inspector.py  settings.py  validator.py
tests/: test_http_server_auth.py  test_http_server_smoke.py  test_http_server_stream.py  test_orchestrator_smoke.py
